<resources>
    <string name="app_name">wGuide</string>
    <string name="title_activity_maps">wGuide</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifiList">WiFi list</string>
    <string name="buttonScan">Scan wireless</string>
    <string name="title_activity_wifilist">Scanner</string>
    <string name="button_find_me">Find Me</string>
    <string name="action_update_map">Update map</string>

    <string name="switch_search_mod">Search WiFi</string>
    <string name="switch_search_mod_on">Search MOD</string>
    <string name="switch_search_mod_off">User MOD</string>
    <string name="menu_remove">Remove</string>

    <string name="content_open_popup">Open Popup Menu</string>
    <string name="toast_empty_database">The database is empty</string>
    <string name="alert_dialog_ok"> I know what i\'m doing </string>
    <string name="alert_dialog_cancel">Thx, I\'ll try later</string>
    <string name="alert_dialog_two_buttons_title">Recommendation</string>
    <string name="menu_add_in_db">Add in DB</string>
    <string name="recomend_part_1">We recommend you not to add a new record to the database. </string>
    <string name="recomend_part_2"> This coordinates will be wrong. </string>

    <string name="title_activity_listFromDb">Database</string>
    <string name="delete_record">Delete record</string>
    <string name="add_record">Add record</string>
    <string name="open_record">Find on map</string>
    <string name="action_list_from_db">Open database</string>
    <string name="list_empty">EMPTY</string>
    <string name="loading">Loading...</string>
    <string name="header_search">Search for network with a batter signal than </string>

    <string name="context_menu_adding"> Add this access point</string>

    <string name="pref_gps_title"> GPS</string>
    <string name="pref_wifi_title"> WiFi</string>
    <string name="pref_summary_mod"> In this mode, the program performs automatic scanning and gets more accurate location coordinates.</string>
    <string name="pref_title_mod">Search mode</string>
    <string name="refer_gps_settings">GPS system settings</string>
    <string name="pref_summary_closeOn"> Scan encrypted access points</string>
    <string name="pref_title_closeOn">Scan all</string>

    <string name="pref_count_sat_title"> Amount of satellites </string>
    <string name="pref_count_sat_dialog_title"> Choose number of satellites</string>
    <string name ="pref_syncConnectionTypes_default">6</string>

    <!-- headers -->
    <string name="headerLevel"> Signal</string>
    <string name="headerSSID">SSID</string>
    <string name="headerBSSID">BSSID</string>
    <string name="headerEncrypt">Encryption </string>

    <!-- Preferences GPS-->
    <string name="title_count_gps"> Number of satellites</string>
    <string name="summary_count_gps"> For safe work with coordinates</string>

    <!-- Prefer WiFi -->
    <string name="title_wifi_min_signal"> Minimum signal to search</string>
    <string name="summary_wifi_min_signal"> The service of scanning will ignore signal lower than this. Attention! You should  input unsigned quantity.</string>
    <string name="title_wifi_auto_min_signal"> Minimum signal to automatic adding</string>
    <string name="summary_wifi_auto_min_signal"> The service of automatic adding in database will ignore signal lower than this. Attention! You should  input unsigned quantity.</string>

    <!-- Preferences MAP-->
    <string name="summary_map_ava_radius">Markers will be visible only in this radius</string>
    <string name="title_map_ava_radius"> Available radius</string>
    <string name="error_adding_db"> Oops, error #02. Please, try again</string>
</resources>
