<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MapsActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_wifiList" android:title="@string/action_wifiList"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_list_from_db" android:title="@string/action_list_from_db"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_map" android:title="@string/action_update_map"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
