<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.



-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="#240088ff"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/headerLevel"
            android:layout_height="match_parent"
            android:layout_width="35dp"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:maxLines="1"
            android:textColor="#ff007aff"
            android:text="@string/headerLevel"

            android:ellipsize="end"
            android:layout_weight="1" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="#ff007aff"
            android:gravity="center"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/headerSSID"
                android:gravity="center_horizontal"
                android:paddingLeft="4dp"
                android:textColor="#d1000245"
                android:paddingRight="4dp"
                android:text="@string/headerSSID"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/headerBSSID"
                android:gravity="center_horizontal"
                android:paddingLeft="4dp"
                android:textColor="#d1000245"
                android:paddingRight="4dp"
                android:text="@string/headerBSSID"/>
        </LinearLayout>
        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/headerEncrypt"
            android:paddingLeft="4dp"
            android:textColor="#ff007aff"
            android:paddingRight="4dp"
            android:text="@string/headerEncrypt"
            android:gravity="center"
            android:layout_weight="1" />


    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refresh_hand_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.sls.wguide.wguide.app.MapsActivity">


<ListView
    android:id="@+id/listView_hand_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
</ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>